# localizing-taiwan-chinese

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
server/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
skill/: SKILL.md
skill/scripts/: localize.py
tests/: test_localize.py  test_server.py
