[project]
name = "localizing-taiwan-chinese"
version = "0.1.0"
description = "Rewrite Chinese text into high-quality Taiwan Modern Chinese via TAIDE"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skill/scripts"]

[dependency-groups]
dev = [
    "pytest>=8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "server", "skill/scripts"]
